--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,11 +129,27 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+:root {
+  --color-scheme: var(--tg-color-scheme, light);
+  --theme-bg-color: var(--tg-theme-bg-color: #ffff, #ffffff);
+  --theme-button-color: var(--tg-theme-button-color: #3390, #3390ec);
+  --theme-button-text-color: var(--tg-theme-button-text-color: #ffff, #ffffff);
+  --theme-hint-color: var(--tg-theme-hint-color: #7075, #707579);
+  --theme-link-color: var(--tg-theme-link-color: #0048, #00488f);
+  --theme-secondary-bg-color: var(
+    --tg-theme-secondary-bg-color: #f4f4,
+    #f4f4f5
+  );
+  --theme-text-color: var(--tg-theme-text-color: #0000, #000000);
+  --viewport-height: var(--tg-viewport-height, 100vh);
+  --viewport-stable-height: var(--tg-viewport-stable-height, 100vh);
 }
